# build-wrap

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml  unset.txt
.github/workflows/: ci.yml  publish.yml
assets/: README.txt  sandboxer.c
fixtures/: .gitignore
fixtures/cargo_config/: Cargo.toml
fixtures/cargo_config/.cargo/: config.toml
fixtures/cargo_target_dir/: Cargo.toml  build.rs
fixtures/custom_build_name/: Cargo.toml  custom_build_name.rs
fixtures/ping/: Cargo.toml  build.rs
scripts/: sandboxer.sh  walk_dir.sh
src/: config.rs  linking.rs  main.rs  util.rs  wrapper.rs
src/util/: common.rs  mod.rs
tests/: allow.rs  build_wrap_cmd_changed.rs  cargo_config.rs  ci.rs  custom_build_name.rs  dogfood.rs  enabled.rs  expand_cmd.rs  integration.rs  markdown_link_check.json  ping.rs  supply_chain.json  util.rs
tests/build_scripts/: inside_out_dir.rs  outside_out_dir.linux.stderr  outside_out_dir.macos.stderr  outside_out_dir.rs  ping.linux.stderr  ping.macos.stderr  ping.rs  rustc_version.rs  tcp_connect.rs  tiocsti.macos.stderr
tests/build_scripts/linux/: tcp_connect.stderr  tiocsti.stderr
tests/build_scripts/linux-sandboxer/: config.toml  outside_out_dir.stderr  ping.stderr~
tests/build_scripts/macos/: ping.stderr  tiocsti.stderr
tests/cases/: dev_null.rs  outside_out_dir.linux.stderr  outside_out_dir.macos.stderr  ping.rs  ping.stderr  rerun_if_build_wrap_cmd_changed.rs  tiocsti.rs  tiocsti.stderr
tests/integration/: allow.rs  build_scripts.rs  build_wrap_cmd_changed.rs  cargo_config.rs  cargo_target_dir.rs  ci.rs  config.rs  config_allow.rs  config_toml.rs  custom_build_name.rs  dogfood.rs  edition_2021.rs  enabled.rs  expand_cmd.rs  main.rs  mod.rs  third_party.rs  util.rs
