[package]
name = "build-wrap"
version = "0.5.0"
authors = ["Samuel Moelius <sam@moeli.us>"]
description = "Help protect against malicious build scripts"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/trailofbits/build-wrap"

# smoelius: This list of dependencies should match what is in src/wrapper.rs.
[dependencies]
anyhow = "1.0"
home = "0.5"
regex = "1.11"
tempfile = "3.16"
toml = "0.8"
xdg = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
cargo_metadata = "0.19"
ctor = "0.2"
snapbox = "0.6"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
let_underscore_untyped = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace]
exclude = ["fixtures", "target"]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/inconsistent_qualification" },
    { git = "https://github.com/trailofbits/dylint", pattern = "examples/restriction/misleading_variable_name" },
]

[workspace.metadata.unmaintained]
ignore = [
    # https://github.com/alacritty/vte/pull/122#issuecomment-2579278540
    "utf8parse",
    "wit-bindgen-rt",
]
